--- a/publication.html
+++ b/publication.html
@@ -23,50 +23,62 @@
 </div>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><font color="blue">Safe Grid Search with Optimal Complexity</font>, International Conference on Machine Learning (<b>ICML</b>), 2019. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 773/3424=22.6%) <br />
+<li><p><a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Safe Grid Search with Optimal Complexity</font></a>. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
+International Conference on Machine Learning (<b>ICML</b>), 2019. (<i>Acceptance rate: 773/3424=22.6%</i>) <br />
 Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi</p>
 </li>
-<li><p><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font>, Advances in Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2018. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 1011/4856=20.8%) <br />
+<li><p><a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
+Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2018. (<i>Acceptance rate: 1011/4856=20.8%</i>) <br />
 <b>Tam Le</b>, Makoto Yamada</p>
 </li>
-<li><p><font color="blue">Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</font>, International Conference on Machine Learning (<b>ICML</b>), 2015. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 270/1037 = 26.0%) <br />
+<li><p><a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;><font color="blue">Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</font></a>. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
+International Conference on Machine Learning (<b>ICML</b>), 2015. (<i>Acceptance rate: 270/1037 = 26.0%</i>) <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
-<li><p><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font>, Machine Learning Journal (<b>MLJ</b>), 2014. [<a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>] <br />
+<li><p><a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font></a> <br />
+Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
 </ul>
 <h2>Others</h2>
 <p><b>Preprints / Technical reports</b></p>
 <ul>
-<li><p><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font>, 2019 [<a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>ArXiv</a>] <br />
+<li><p><a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a> <br />
+ArXiv, 2019. <br /> 
 <b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi</p>
 </li>
-<li><p><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font>, 2019 [<a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;>ArXiv</a>] <br />
+<li><p><a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font></a> <br />
+ArXiv, 2019. <br />
 Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada</p>
 </li>
 </ul>
 <p><b>Other Journals / Conference papers</b></p>
 <ul>
-<li><p><font color="blue">A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data</font>, Science and Technology of Advance Materials Journal (STAM), 2018. [<a href="https://www.tandfonline.com/doi/full/10.1080/14686996.2018.1439253#aHR0cHM6Ly93d3cudGFuZGZvbmxpbmUuY29tL2RvaS9wZGYvMTAuMTA4MC8xNDY4Njk5Ni4yMDE4LjE0MzkyNTM/bmVlZEFjY2Vzcz10cnVlQEBAMA==" target=&ldquo;blank&rdquo;>PDF</a>] <br />
+<li><p><a href="https://www.tandfonline.com/doi/full/10.1080/14686996.2018.1439253#aHR0cHM6Ly93d3cudGFuZGZvbmxpbmUuY29tL2RvaS9wZGYvMTAuMTA4MC8xNDY4Njk5Ni4yMDE4LjE0MzkyNTM/bmVlZEFjY2Vzcz10cnVlQEBAMA==" target=&ldquo;blank&rdquo;><font color="blue">A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data</font></a> <br />
+Science and Technology of Advance Materials Journal (STAM), 2018. <br />
 Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yoshitaka Tateyama, Hisatsugu Yamazaki</p>
 </li>
-<li><p><font color="blue">Generalized Aitchison Embeddings for Histograms</font>, Asian Conference on Machine Learning (ACML), 2013 (oral). [<a href="http://proceedings.mlr.press/v29/Le13.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/acml13/TamLe_ACML13.pdf?attachauth=ANoY7co0ctNrM6IGtGy7-HUUGaF_jZNDALnhKuyeXTvrvnRFksIGZaEm5xtXaqY8o92WUlHWgomz46LrFTNuAxHpyH260KPc9qFskG75521q96T1aVUXrtSSJsMZowtTBxFO5cMtu6l4GYPQT-rsx97SfSU8QxMoGN-ik17jgZyKGNqWVINs36qZ7VDnUYopGTOi0_vMOKI5AHjMnjTEm_yWp9VdkJcA05GFzRhsNpNJqZewg222Sqo%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] (Acceptance rate: 31%, oral paper rate: 9.7%) <br />
+<li><p><a href="http://proceedings.mlr.press/v29/Le13.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Aitchison Embeddings for Histograms</font></a>. [<a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/acml13/TamLe_ACML13.pdf?attachauth=ANoY7co0ctNrM6IGtGy7-HUUGaF_jZNDALnhKuyeXTvrvnRFksIGZaEm5xtXaqY8o92WUlHWgomz46LrFTNuAxHpyH260KPc9qFskG75521q96T1aVUXrtSSJsMZowtTBxFO5cMtu6l4GYPQT-rsx97SfSU8QxMoGN-ik17jgZyKGNqWVINs36qZ7VDnUYopGTOi0_vMOKI5AHjMnjTEm_yWp9VdkJcA05GFzRhsNpNJqZewg222Sqo%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
+Asian Conference on Machine Learning (ACML), 2013 (oral). (<i>Acceptance rate: 31%, oral paper rate: 9.7%</i>) <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
-<li><p><font color="blue">Image Categorization Using Hierarchical Spatial Matching Kernel</font>, Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 42, No. 2, 2013. [<a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/hsmk-code/TL.YK.AS-HSMK-IIEEJ13.pdf?attachauth=ANoY7cptnG2XULNdwNvStBxHRF8txio8ZQk3x6EZgWSPZPNf91QFmZQAI4gI6v7o2bS48WD9Pcn-KC1VGm43cZh6E0nH_xC0jDkQ22HyVHkW7V-8NOF0cpQGaxgdxxtsQqz50Mc3PkLvMsSSCxyiGCTgUmzdycH3WiQK64E9RV6dYDItqJs-EJZbTCq9qJT6enMaItGICb7BP6M1ybUWqCMEXIBBw7JAUtmDfUZkl2auPdjT5bSEw_o%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>PDF</a>] <br />
+<li><p><a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/hsmk-code/TL.YK.AS-HSMK-IIEEJ13.pdf?attachauth=ANoY7cptnG2XULNdwNvStBxHRF8txio8ZQk3x6EZgWSPZPNf91QFmZQAI4gI6v7o2bS48WD9Pcn-KC1VGm43cZh6E0nH_xC0jDkQ22HyVHkW7V-8NOF0cpQGaxgdxxtsQqz50Mc3PkLvMsSSCxyiGCTgUmzdycH3WiQK64E9RV6dYDItqJs-EJZbTCq9qJT6enMaItGICb7BP6M1ybUWqCMEXIBBw7JAUtmDfUZkl2auPdjT5bSEw_o%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;><font color="blue">Image Categorization Using Hierarchical Spatial Matching Kernel</font></a> <br />
+Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 42, No. 2, 2013. <br />
 <b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto</p>
 </li>
-<li><p><font color="blue">Hierarchical Spatial Matching Kernel for Image Categorization</font>, International Conference on Image Processing and Recognition (ICIAR), 2011 (oral). [<a href="https://www.dropbox.com/s/4bqrsuzn9as0tix/TamLe-ICIAR11.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="https://f2496fb7-a-62cb3a1a-s-sites.googlegroups.com/site/lttam85/Home/TamLe-HSMK-ICIAR11.pdf?attachauth=ANoY7crjZ3Vt6hzUNYaDrFcbxZa7jywngZ-KX3FDN8uMs7NLsMbGWBOp122P29kFrRmXAgYLVtN6VKr-TksXj7p_XUSOyo_WDfmjl_6xRsFR-Cf3OTCfrdyLoGvODtRi7i5xS3L0j1jKiAf-EncSOtNba7Qaq1EL46LaG9rLERKLvr39AeOSKb8MVy5oN2o-mW0PMEwIfDW8p8jIUPR_XBAqg2hpJoJSMKOtzihdKDvTMGuhBiniQIk%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] (Acceptance rate: 57%, oral paper rate: 25%) <br />
+<li><p><a href="https://www.dropbox.com/s/4bqrsuzn9as0tix/TamLe-ICIAR11.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Hierarchical Spatial Matching Kernel for Image Categorization</font></a>. [<a href="https://f2496fb7-a-62cb3a1a-s-sites.googlegroups.com/site/lttam85/Home/TamLe-HSMK-ICIAR11.pdf?attachauth=ANoY7crjZ3Vt6hzUNYaDrFcbxZa7jywngZ-KX3FDN8uMs7NLsMbGWBOp122P29kFrRmXAgYLVtN6VKr-TksXj7p_XUSOyo_WDfmjl_6xRsFR-Cf3OTCfrdyLoGvODtRi7i5xS3L0j1jKiAf-EncSOtNba7Qaq1EL46LaG9rLERKLvr39AeOSKb8MVy5oN2o-mW0PMEwIfDW8p8jIUPR_XBAqg2hpJoJSMKOtzihdKDvTMGuhBiniQIk%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
+International Conference on Image Processing and Recognition (ICIAR), 2011 (oral). (<i>Acceptance rate: 57%, oral paper rate: 25%</i>)<br />
 <b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, Son Tran, Thuc Nguyen</p>
 </li>
-<li><p><font color="blue">Realtime Traffic Sign Detection Using Color and Shape-Based Features</font>, Asian Conference on Intelligent Information and Database Systems (ACIIDS), 2010 (oral). [<a href="https://www.dropbox.com/s/987ev6ok1dtatyj/TamLe-ACIIDS10.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>] <br />
+<li><p><a href="https://www.dropbox.com/s/987ev6ok1dtatyj/TamLe-ACIIDS10.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Realtime Traffic Sign Detection Using Color and Shape-Based Features</font></a> <br />
+Asian Conference on Intelligent Information and Database Systems (ACIIDS), 2010 (oral). <br />
 <b>Tam Le</b>, Son Tran, Seichii Mita, Thuc Nguyen</p>
 </li>
 </ul>
 <p><b>Thesis</b></p>
 <ul>
-<li><p><font color="blue">Geometry-Aware Learning Algorithms for Histogram Data Using Adaptive Metric Embeddings and Kernel Functions</font>, PhD thesis, Kyoto University, Japan, 2015. [<a href="https://repository.kulib.kyoto-u.ac.jp/dspace/bitstream/2433/204594/2/djohk00596.pdf" target=&ldquo;blank&rdquo;>PDF</a>]</p>
+<li><p><a href="https://repository.kulib.kyoto-u.ac.jp/dspace/bitstream/2433/204594/2/djohk00596.pdf" target=&ldquo;blank&rdquo;><font color="blue">Geometry-Aware Learning Algorithms for Histogram Data Using Adaptive Metric Embeddings and Kernel Functions</font></a> <br />
+PhD thesis, Kyoto University, Japan, 2015.</p>
 </li>
 </ul>
 <h2>Workshop Posters / Talks</h2>
@@ -76,11 +88,11 @@ Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yos
 </li>
 <li><p>2019, <font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>.</p>
 </li>
-<li><p>2018, <font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="http://gimli.cc/2018/" target=&ldquo;blank&rdquo;>ICML workshops (Geometry in Machine Learning)</a>. [<a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.html" target=&ldquo;blank&rdquo;>a longer version at NeurIPS/NIPS&rsquo;18</a>]</p>
+<li><p>2018, <a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>, <a href="http://gimli.cc/2018/" target=&ldquo;blank&rdquo;>ICML workshops (Geometry in Machine Learning)</a>.</p>
 </li>
 <li><p>2018, <font color="blue">Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="https://sites.google.com/view/aip-fau-mlgt-2018/home" target=&ldquo;blank&rdquo;>Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization</a>. </p>
 </li>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">Optimal Approximation for regularization and validation path</font>. <a href="http://smai-mode2018.imag.fr" target=&ldquo;blank&rdquo;>Journees SMAI MODE</a>, 2018. [<a href="http://smai-mode2018.imag.fr/resumes/resumesLong/subm26.pdf" target=&ldquo;blank&rdquo;>PDF</a>]</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <a href="http://smai-mode2018.imag.fr/resumes/resumesLong/subm26.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Approximation for regularization and validation path</font></a>. <a href="http://smai-mode2018.imag.fr" target=&ldquo;blank&rdquo;>Journees SMAI MODE</a>, 2018.</p>
 </li>
 <li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</font>. <a href="http://cap2018.litislab.fr/Programme-en.html" target=&ldquo;blank&rdquo;>Conference Sur L'Apprentissage Automatique (CAp)</a>, 2018.</p>
 </li>
@@ -102,7 +114,7 @@ Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yos
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-07-16 12:31:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-07-16 21:19:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
