--- a/professional.html
+++ b/professional.html
@@ -14,7 +14,6 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="professional.html" class="current">Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="honor.html">Honors&nbsp;&amp;&nbsp;Awards</a></div>
 <div class="menu-item"><a href="code.html">Code&nbsp;&amp;&nbsp;Datasets</a></div>
 </td>
 <td id="layout-content">
@@ -31,19 +30,23 @@
 <li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.</p>
 </li>
 </ul>
-<p><b>Committee Member of Conferences</b></p>
+<p><b>Program Committee / Journal Reviewer</b></p>
 <ul>
-<li><p>Program committee, Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019</p>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019</p>
 </li>
-<li><p>Program committee, International Conference on Machine Learning (<b>ICML</b>): 2015, 2019</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019</p>
 </li>
-<li><p>Reviewer, Machine Learning Journal (<b>MLJ</b>): 2017(1), 2018(1), 2019(1)</p>
+<li><p>International Conference on Learning Representations (ICLR): 2020</p>
 </li>
-<li><p>Reviewer, Data Mining and Knowledge Discovery Journal (DMKD): 2016(1), 2017(1)</p>
+<li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</p>
 </li>
-<li><p>Program Committee, International Joint Conference on Artificial Intelligence (IJCAI): 2018-2019</p>
+<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2019</p>
 </li>
-<li><p>Program Committee, Asian Conference on Machine Learning (ACML): 2013-2019</p>
+<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020</p>
+</li>
+<li><p>Data Mining and Knowledge Discovery Journal (DMKD): 2016(1), 2017(1)</p>
+</li>
+<li><p>Asian Conference on Machine Learning (ACML): 2013-2019</p>
 </li>
 </ul>
 <p><b>External Reviewer</b></p>
@@ -52,9 +55,9 @@
 </li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2016-2018</p>
 </li>
-<li><p>Machine Learning Journal (<b>MLJ</b>): 2018(1)</p>
+<li><p>Machine Learning Journal (MLJ): 2018(1)</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2016, 2018</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2016, 2018</p>
 </li>
 <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD): 2016, 2017</p>
 </li>
@@ -66,34 +69,34 @@
 </li>
 </ul>
 <h2>Teaching Assistant</h2>
-<p><b><a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a></b> <br /></p>
+<p><b><a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a></b> (for M.Sc. program)<br /></p>
 <ul>
-<li><p>2015, Perspective in Informatics, Informatics Seminar. (MSc)</p>
+<li><p>2015, Perspective in Informatics, Informatics Seminar.</p>
 </li>
-<li><p>2013, Large Scale Optimization and Machine Learning, Marco Cuturi. (MSc)</p>
+<li><p>2013, Large Scale Optimization and Machine Learning, Marco Cuturi.</p>
 </li>
-<li><p>2013, Pattern Recognition Advances, Marco Cuturi. (MSc)</p>
+<li><p>2013, Pattern Recognition Advances, Marco Cuturi.</p>
 </li>
-<li><p>2013, Statistical Machine Learning, Marco Cuturi &amp; Akihiro Yamamoto. (MSc)</p>
+<li><p>2013, Statistical Machine Learning, Marco Cuturi &amp; Akihiro Yamamoto.</p>
 </li>
 </ul>
-<p><b><a href="http://www.jvn.edu.vn" target=&ldquo;blank&rdquo;>John von Neumann Institute (JVN)</a></b> <br /></p>
+<p><b><a href="http://www.jvn.edu.vn" target=&ldquo;blank&rdquo;>John von Neumann Institute (JVN)</a></b> (for M.Sc. program) <br /></p>
 <ul>
-<li><p>2012, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy. (MSc)</p>
+<li><p>2012, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy.</p>
 </li>
-<li><p>2011, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy. (MSc)</p>
+<li><p>2011, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy.</p>
 </li>
 </ul>
-<p><b><a href="http://www.fit.hcmus.edu.vn/vn/Default.aspx?tabid=325" target=&ldquo;blank&rdquo;>University of Science, VNU-HCMC</a></b> <i>(Selected)</i> <br /></p>
+<p><b><a href="http://www.fit.hcmus.edu.vn/vn/Default.aspx?tabid=325" target=&ldquo;blank&rdquo;>University of Science, VNU-HCMC</a></b> (for B.Sc. program) <i>(Selected)</i> <br /></p>
 <ul>
-<li><p>2012, Machine Learning, Marco Cuturi - Kyoto University, Japan. (Undergrad)</p>
+<li><p>2012, Machine Learning, Marco Cuturi - Kyoto University, Japan.</p>
 </li>
-<li><p>2012, Game Theory, Multi-agents and social algorithm, Thuc Vu - Google Inc, USA. (Undergrad)</p>
+<li><p>2012, Game Theory, Multi-agents and social algorithm, Thuc Vu - Google Inc, USA.</p>
 </li>
-<li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Bekerley, USA. (Undergrad)</p>
+<li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Bekerley, USA.</p>
 </li>
 </ul>
-<h2>Summer Schools and Conferences</h2>
+<h2>Participants in Summer Schools and Conferences</h2>
 <p><b>Summer Schools</b></p>
 <ul>
 <li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
@@ -109,12 +112,12 @@
 </li>
 <li><p>Neural Information Processing Systems (<b>NIPS/NeurIPS</b>): 2014, 2017, 2018.</p>
 </li>
-<li><p>Conference on Learning Theory (<b>COLT</b>): 2018.</p>
+<li><p>Conference on Learning Theory (COLT): 2018.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-07-16 21:19:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-07-30 20:43:37 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
