--- a/code.html
+++ b/code.html
@@ -14,7 +14,6 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="professional.html">Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="honor.html">Honors&nbsp;&amp;&nbsp;Awards</a></div>
 <div class="menu-item"><a href="code.html" class="current">Code&nbsp;&amp;&nbsp;Datasets</a></div>
 </td>
 <td id="layout-content">
@@ -32,7 +31,7 @@
 </li>
 <li><p><a href="https://sites.google.com/site/lttamvn/research/traffic-sign-detection" target=&ldquo;blank&rdquo;>Realtime traffic sign detection using color and shape-based features</a>. (ACIIDS 2010)</p>
 </li>
-<li><p><a href="https://sites.google.com/site/lttamvn/research/traffic-sign-detection" target=&ldquo;blank&rdquo;>Color Training Dataset for Traffic Sign Segmentation</a>. </p>
+<li><p><a href="https://sites.google.com/site/lttamvn/research/traffic-sign-detection" target=&ldquo;blank&rdquo;>Color Training Dataset for Traffic Sign Segmentation</a>. (ACIIDS 2010) </p>
 </li>
 <li><p><a href="https://sites.google.com/site/lttamvn/research/traffic-sign-detection" target=&ldquo;blank&rdquo;>Test Dataset for Traffic Sign Detection</a>. (ACIIDS 2010)</p>
 </li>
@@ -42,7 +41,7 @@
 <p>The code is supplied &ldquo;as is&rdquo; without warranty of any kind, and the author(s) disclaim any and all warranties, including but not limited to any implied warranties of merchantability and fitness for a particular purpose, and any warranties or non infringement. The user assumes all liability and responsibility for use of the code, and in no event shall the author(s) be liable for damages of any kind resulting from its use.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-07-16 21:19:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-07-30 20:43:37 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
