--- a/publication.html
+++ b/publication.html
@@ -23,19 +23,19 @@
 <h2>Selected Journals / Conference papers</h2>
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Safe Grid Search with Optimal Complexity</font></a>. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
-International Conference on Machine Learning (<b>ICML</b>), 2019. (<i>Acceptance rate: 773/3424=22.6%</i>) <br />
+International Conference on Machine Learning (<i><b>ICML</b></i>), 2019. (<i>Acceptance rate: 773/3424=22.6%</i>) <br />
 Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi</p>
 </li>
 <li><p><a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
-Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2018. (<i>Acceptance rate: 1011/4856=20.8%</i>) <br />
+Neural Information Processing Systems (<i><b>NeurIPS/NIPS</b></i>), 2018. (<i>Acceptance rate: 1011/4856=20.8%</i>) <br />
 <b>Tam Le</b>, Makoto Yamada</p>
 </li>
 <li><p><a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;><font color="blue">Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</font></a>. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
-International Conference on Machine Learning (<b>ICML</b>), 2015. (<i>Acceptance rate: 270/1037 = 26.0%</i>) <br />
+International Conference on Machine Learning (<i><b>ICML</b></i>), 2015. (<i>Acceptance rate: 270/1037 = 26.0%</i>) <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
 <li><p><a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font></a> <br />
-Machine Learning Journal (<b>MLJ</b>), 2014. <br />
+Machine Learning Journal (<i><b>MLJ</b></i>), 2014. <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
 </ul>
@@ -58,7 +58,7 @@ Science and Technology of Advance Materials Journal (STAM), 2018. <br />
 Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yoshitaka Tateyama, Hisatsugu Yamazaki</p>
 </li>
 <li><p><a href="http://proceedings.mlr.press/v29/Le13.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Aitchison Embeddings for Histograms</font></a>. [<a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/acml13/TamLe_ACML13.pdf?attachauth=ANoY7co0ctNrM6IGtGy7-HUUGaF_jZNDALnhKuyeXTvrvnRFksIGZaEm5xtXaqY8o92WUlHWgomz46LrFTNuAxHpyH260KPc9qFskG75521q96T1aVUXrtSSJsMZowtTBxFO5cMtu6l4GYPQT-rsx97SfSU8QxMoGN-ik17jgZyKGNqWVINs36qZ7VDnUYopGTOi0_vMOKI5AHjMnjTEm_yWp9VdkJcA05GFzRhsNpNJqZewg222Sqo%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
-Asian Conference on Machine Learning (ACML), 2013 (oral). (<i>Acceptance rate: 31%, oral paper rate: 9.7%</i>) <br />
+Asian Conference on Machine Learning (ACML), 2013 (oral). (<i>Oral paper rate: 9.7%</i>) <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
 <li><p><a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/hsmk-code/TL.YK.AS-HSMK-IIEEJ13.pdf?attachauth=ANoY7cptnG2XULNdwNvStBxHRF8txio8ZQk3x6EZgWSPZPNf91QFmZQAI4gI6v7o2bS48WD9Pcn-KC1VGm43cZh6E0nH_xC0jDkQ22HyVHkW7V-8NOF0cpQGaxgdxxtsQqz50Mc3PkLvMsSSCxyiGCTgUmzdycH3WiQK64E9RV6dYDItqJs-EJZbTCq9qJT6enMaItGICb7BP6M1ybUWqCMEXIBBw7JAUtmDfUZkl2auPdjT5bSEw_o%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;><font color="blue">Image Categorization Using Hierarchical Spatial Matching Kernel</font></a> <br />
@@ -66,7 +66,7 @@ Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 4
 <b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto</p>
 </li>
 <li><p><a href="https://www.dropbox.com/s/4bqrsuzn9as0tix/TamLe-ICIAR11.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Hierarchical Spatial Matching Kernel for Image Categorization</font></a>. [<a href="https://f2496fb7-a-62cb3a1a-s-sites.googlegroups.com/site/lttam85/Home/TamLe-HSMK-ICIAR11.pdf?attachauth=ANoY7crjZ3Vt6hzUNYaDrFcbxZa7jywngZ-KX3FDN8uMs7NLsMbGWBOp122P29kFrRmXAgYLVtN6VKr-TksXj7p_XUSOyo_WDfmjl_6xRsFR-Cf3OTCfrdyLoGvODtRi7i5xS3L0j1jKiAf-EncSOtNba7Qaq1EL46LaG9rLERKLvr39AeOSKb8MVy5oN2o-mW0PMEwIfDW8p8jIUPR_XBAqg2hpJoJSMKOtzihdKDvTMGuhBiniQIk%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
-International Conference on Image Processing and Recognition (ICIAR), 2011 (oral). (<i>Acceptance rate: 57%, oral paper rate: 25%</i>)<br />
+International Conference on Image Processing and Recognition (ICIAR), 2011 (oral). (<i>Oral paper rate: 25%</i>)<br />
 <b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, Son Tran, Thuc Nguyen</p>
 </li>
 <li><p><a href="https://www.dropbox.com/s/987ev6ok1dtatyj/TamLe-ACIIDS10.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Realtime Traffic Sign Detection Using Color and Shape-Based Features</font></a> <br />
@@ -113,7 +113,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-07-30 21:09:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-07-30 21:15:25 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
