--- a/professional.html
+++ b/professional.html
@@ -32,9 +32,9 @@
 </ul>
 <p><b>Program Committee / Journal Reviewer</b></p>
 <ul>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019</p>
+<li><p>Neural Information Processing Systems (<i><b>NeurIPS</i>NIPS</b>/): 2015, 2019</p>
 </li>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019</p>
+<li><p>International Conference on Machine Learning (<i><b>ICML</b></i>): 2015, 2019</p>
 </li>
 <li><p>International Conference on Learning Representations (ICLR): 2020</p>
 </li>
@@ -51,9 +51,9 @@
 </ul>
 <p><b>External Reviewer</b></p>
 <ul>
-<li><p>Neural Information Processing Systems (<b>NIPS</b>): 2016, 2018</p>
+<li><p>Neural Information Processing Systems (<i><b>NeurIPS</i>NIPS</b>/): 2016, 2018</p>
 </li>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2016-2018</p>
+<li><p>International Conference on Machine Learning (<i><b>ICML</b></i>): 2016-2018</p>
 </li>
 <li><p>Machine Learning Journal (MLJ): 2018(1)</p>
 </li>
@@ -108,16 +108,16 @@
 </ul>
 <p><b>Conferences</b></p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018, 2019.</p>
+<li><p>International Conference on Machine Learning (<i><b>ICML</b></i>): 2015, 2018, 2019.</p>
 </li>
-<li><p>Neural Information Processing Systems (<b>NIPS/NeurIPS</b>): 2014, 2017, 2018.</p>
+<li><p>Neural Information Processing Systems (<i><b>NeurIPS</i>NIPS</b>/): 2014, 2017, 2018.</p>
 </li>
 <li><p>Conference on Learning Theory (COLT): 2018.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-07-30 21:15:25 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-07-30 21:18:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
