--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2019.</p>
 <h2>News</h2>
 <ul>
+<li><p>04-Sep-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>&ldquo;Tree-Sliced Variants of Wasserstein Distances&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;19</a>! This is joint work with Marco Cuturi, Kenji Fukumizu, and Makoto Yamada.  </p>
+</li>
 <li><p>11-Jul-2019, <a href="https://www.dropbox.com/s/gejiyhbjfcpfk4t/2019July_TDA_GeometricKernel.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (Kernel methods for Persistence Diagrams: A Geometric Approach) at Institute for Advanced Study, Kyoto University.</p>
 </li>
 <li><p>25-Apr-2019, Python code for our <a href="https://icml.cc/" target=&ldquo;blank&rdquo;>ICML&rsquo;19</a> (Safe Grid Search with Optimal Complexity) is available <a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>[Github]</a>, coded by Eugene Ndiaye.</p>
@@ -119,7 +121,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-07-30 21:22:15 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-09-04 10:03:00 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
