--- a/publication.html
+++ b/publication.html
@@ -22,6 +22,10 @@
 </div>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a> <br />
+<i>to appear in</i> Neural Information Processing Systems (<i><b>NeurIPS/NIPS</b></i>), 2019. (<i>Acceptance rate: 1428/6743=21.2%</i>) <br /> 
+<b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi</p>
+</li>
 <li><p><a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Safe Grid Search with Optimal Complexity</font></a>. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 International Conference on Machine Learning (<i><b>ICML</b></i>), 2019. (<i>Acceptance rate: 773/3424=22.6%</i>) <br />
 Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi</p>
@@ -42,10 +46,6 @@ Machine Learning Journal (<i><b>MLJ</b></i>), 2014. <br />
 <h2>Others</h2>
 <p><b>Preprints / Technical reports</b></p>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a> <br />
-ArXiv, 2019. <br /> 
-<b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi</p>
-</li>
 <li><p><a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font></a> <br />
 ArXiv, 2019. <br />
 Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada</p>
@@ -113,7 +113,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-07-30 21:22:15 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-09-04 10:03:00 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
