--- a/publication.html
+++ b/publication.html
@@ -23,23 +23,23 @@
 <h2>Selected Journals / Conference papers</h2>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a> <br />
-<i>to appear in</i> Neural Information Processing Systems (<i><b>NeurIPS/NIPS</b></i>), 2019. (<i>Acceptance rate: 1428/6743=21.2%</i>) <br /> 
+<i>to appear in</i> Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2019. (<i>Acceptance rate: 1428/6743=21.2%</i>) <br /> 
 <b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi</p>
 </li>
 <li><p><a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Safe Grid Search with Optimal Complexity</font></a>. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
-International Conference on Machine Learning (<i><b>ICML</b></i>), 2019. (<i>Acceptance rate: 773/3424=22.6%</i>) <br />
+International Conference on Machine Learning (<b>ICML</b>), 2019. (<i>Acceptance rate: 773/3424=22.6%</i>) <br />
 Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi</p>
 </li>
 <li><p><a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
-Neural Information Processing Systems (<i><b>NeurIPS/NIPS</b></i>), 2018. (<i>Acceptance rate: 1011/4856=20.8%</i>) <br />
+Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2018. (<i>Acceptance rate: 1011/4856=20.8%</i>) <br />
 <b>Tam Le</b>, Makoto Yamada</p>
 </li>
 <li><p><a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;><font color="blue">Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</font></a>. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
-International Conference on Machine Learning (<i><b>ICML</b></i>), 2015. (<i>Acceptance rate: 270/1037 = 26.0%</i>) <br />
+International Conference on Machine Learning (<b>ICML</b>), 2015. (<i>Acceptance rate: 270/1037 = 26.0%</i>) <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
 <li><p><a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font></a> <br />
-Machine Learning Journal (<i><b>MLJ</b></i>), 2014. <br />
+Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
 </ul>
@@ -113,7 +113,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-09-04 10:03:00 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-09-04 10:07:44 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
