--- a/professional.html
+++ b/professional.html
@@ -108,16 +108,16 @@
 </ul>
 <p><b>Conferences</b></p>
 <ul>
-<li><p>International Conference on Machine Learning (<i><b>ICML</b></i>): 2015, 2018, 2019.</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018, 2019.</p>
 </li>
-<li><p>Neural Information Processing Systems (<i><b>NeurIPS/NIPS</b></i>): 2014, 2017, 2018.</p>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017, 2018.</p>
 </li>
 <li><p>Conference on Learning Theory (COLT): 2018.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-09-04 10:03:00 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-09-04 10:07:44 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
