--- a/index.html
+++ b/index.html
@@ -93,8 +93,13 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <li><p>10/2015 - 12/2015, Associate Researcher, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/index-e.html" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>.</p>
 <ul>
 <li><p>Mentors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor Akihiro Yamamoto</a>, <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Professor Marco Cuturi</a>.</p>
-</li></ul>
 </li>
+</ul>
+
+</li>
+</ul>
+<h2>Research Intern Experience</h2>
+<ul>
 <li><p>01/2014 - 02/2014, Internship student, <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
 <ul>
 <li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.</p>
@@ -121,7 +126,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-09-05 21:26:30 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-10-10 10:59:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
