--- a/professional.html
+++ b/professional.html
@@ -36,6 +36,8 @@
 </li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019</p>
 </li>
+<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2020</p>
+</li>
 <li><p>International Conference on Learning Representations (ICLR): 2020</p>
 </li>
 <li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</p>
@@ -108,16 +110,18 @@
 </ul>
 <p><b>Conferences</b></p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018, 2019.</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2019.</p>
 </li>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017, 2018.</p>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2019.</p>
+</li>
+<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2019.</p>
 </li>
 <li><p>Conference on Learning Theory (COLT): 2018.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-09-05 21:26:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-10-10 10:59:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
