--- a/publication.html
+++ b/publication.html
@@ -20,6 +20,7 @@
 <div id="toptitle">
 <h1>Tam Le - Publications</h1>
 </div>
+<p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a> <br />
@@ -47,16 +48,16 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <p><b>Preprints / Technical reports</b></p>
 <ul>
 <li><p><font color="blue">On Scalable Variant of Wasserstein Barycenter</font> <br />
-Submitted, 2019. <br />
-<b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada (<font color="red">*</font>: equal contribution)</p>
+ArXiv, 2019. <br />
+<b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada</p>
 </li>
 <li><p><font color="blue">Computationally Efficient Tree Variants of Gromov-Wasserstein</font> <br />
-Submitted, 2019. <br />
-<b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada (<font color="red">*</font>: equal contribution)</p>
+ArXiv, 2019. <br />
+<b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/1909.02373.pdf" target=&ldquo;blank&rdquo;><font color="blue">LSMI-Sinkhorn: Semi-supervised Squared-Loss Mutual Information Estimation with Optimal Transport</font></a> <br />
 ArXiv, 2019. <br />
-Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Yao-Hung Hubert Tsai, <b>Tam Le</b>, Ruslan Salakhutdinov, Yi Yang (<font color="red">*</font>: equal contribution)</p>
+Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Yao-Hung Hubert Tsai, <b>Tam Le</b>, Ruslan Salakhutdinov, Yi Yang</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font></a> <br />
 ArXiv, 2019. <br />
@@ -125,7 +126,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-10-10 10:59:15 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-10-10 20:28:51 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
