--- a/publication.html
+++ b/publication.html
@@ -47,11 +47,11 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <h2>Others</h2>
 <p><b>Preprints / Technical reports</b></p>
 <ul>
-<li><p><font color="blue">On Scalable Variant of Wasserstein Barycenter</font> <br />
+<li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">On Scalable Variant of Wasserstein Barycenter</font></a> <br />
 ArXiv, 2019. <br />
 <b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada</p>
 </li>
-<li><p><font color="blue">Computationally Efficient Tree Variants of Gromov-Wasserstein</font> <br />
+<li><p><a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;><font color="blue">Computationally Efficient Tree Variants of Gromov-Wasserstein</font></a> <br />
 ArXiv, 2019. <br />
 <b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada</p>
 </li>
@@ -126,7 +126,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-10-10 20:28:51 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-10-11 12:19:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
