--- a/code.html
+++ b/code.html
@@ -21,11 +21,13 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
-<li><p><a href="https://sites.google.com/site/lttamvn/research/safe-grid-search?authuser=0" target=&ldquo;blank&rdquo;>Safe Grid Search with Optimal Complexity</a>. (ICML 2019)</p>
+<li><p><a href="https://github.com/lttam/Kmeans-FlowTreeGW-Barycenter" target=&ldquo;blank&rdquo;>Kmeans with Flow-based Tree Gromov-Wasserstein Barycenters</a>. (ArXiv 2019)</p>
 </li>
-<li><p><a href="https://sites.google.com/site/lttamvn/research/persistence-fisher?authuser=0" target=&ldquo;blank&rdquo;>Persistence Fisher distance (Fisher information metric between two persistence diagrams) with or without Fast Gauss Transform</a>. (NeurIPS/NIPS 2018)</p>
+<li><p><a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>Safe Grid Search with Optimal Complexity</a>. (ICML 2019)</p>
 </li>
-<li><p><a href="https://sites.google.com/site/lttamvn/research/generalized-aitchison-embeddings" target=&ldquo;blank&rdquo;>Generalized Aitchison Embeddings for Histograms</a>. (ACML 2013 &amp; MLJ 2014)</p>
+<li><p><a href="https://github.com/lttam/PersistenceFisher" target=&ldquo;blank&rdquo;>Persistence Fisher distance (Fisher information metric between two persistence diagrams) with or without Fast Gauss Transform</a>. (NeurIPS/NIPS 2018)</p>
+</li>
+<li><p><a href="https://github.com/lttam/GenAitEmb" target=&ldquo;blank&rdquo;>Generalized Aitchison Embeddings for Histograms</a>. (ACML 2013 &amp; MLJ 2014)</p>
 </li>
 <li><p><a href="https://sites.google.com/site/lttamvn/research/object-category" target=&ldquo;blank&rdquo;>Hierarchical Spatial Matching Kernel for Image Categorization</a>. (ICIAR 2011 &amp; IIEEJ 2013)</p>
 </li>
@@ -42,7 +44,7 @@
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-10-11 12:19:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-10-11 14:42:48 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
