--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2019.</p>
 <h2>News</h2>
 <ul>
+<li><p>11-Oct-2019, Matlab code for Kmeans with Flow-based Tree Gromov-Wasserstein in <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Computationally Efficient Tree Variants of Gromov-Wasserstein&rdquo;</a> is available <a href="https://github.com/lttam/Kmeans-FlowTreeGW-Barycenter" target=&ldquo;blank&rdquo;>[Github]</a>.  </p>
+</li>
 <li><p>04-Sep-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>&ldquo;Tree-Sliced Variants of Wasserstein Distances&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;19</a>! This is joint work with Marco Cuturi, Kenji Fukumizu, and Makoto Yamada.  </p>
 </li>
 <li><p>11-Jul-2019, <a href="https://www.dropbox.com/s/gejiyhbjfcpfk4t/2019July_TDA_GeometricKernel.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (Kernel methods for Persistence Diagrams: A Geometric Approach) at Institute for Advanced Study, Kyoto University.</p>
@@ -126,7 +128,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-10-11 14:42:48 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-10-11 14:52:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
