--- a/code.html
+++ b/code.html
@@ -21,6 +21,8 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
+<li><p><a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>Tree-(Sliced)-Wasserstein Distances</a>. (NeurIPS/NIPS 2019)</p>
+</li>
 <li><p><a href="https://github.com/lttam/Kmeans-FlowTreeGW-Barycenter" target=&ldquo;blank&rdquo;>Kmeans with Flow-based Tree Gromov-Wasserstein Barycenters</a>. (ArXiv 2019)</p>
 </li>
 <li><p><a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>Safe Grid Search with Optimal Complexity</a>. (ICML 2019)</p>
@@ -44,7 +46,7 @@
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-10-11 14:52:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-10-26 08:13:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
