--- a/publication.html
+++ b/publication.html
@@ -23,8 +23,8 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a> <br />
-<i>to appear in</i> Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2019. (<i>Acceptance rate: 1428/6743=21.2%</i>) <br /> 
+<li><p><a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a> [<a href="https://www.dropbox.com/s/4ugbmyu5jepxun0/TLMYKFMC_NeurIPS19_TSW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
+Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2019. (<i>Acceptance rate: 1428/6743=21.2%</i>) <br /> 
 <b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi</p>
 </li>
 <li><p><a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Safe Grid Search with Optimal Complexity</font></a>. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
@@ -45,7 +45,7 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 </li>
 </ul>
 <h2>Others</h2>
-<p><b>Preprints / Technical reports</b></p>
+<p><b>Preprints</b></p>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">On Scalable Variant of Wasserstein Barycenter</font></a> <br />
 ArXiv, 2019. <br />
@@ -59,13 +59,13 @@ ArXiv, 2019. <br />
 ArXiv, 2019. <br />
 Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Yao-Hung Hubert Tsai, <b>Tam Le</b>, Ruslan Salakhutdinov, Yi Yang</p>
 </li>
+</ul>
+<p><b>Other Journals / Conference papers / Technical reports</b></p>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font></a> <br />
 ArXiv, 2019. <br />
 Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada</p>
 </li>
-</ul>
-<p><b>Other Journals / Conference papers</b></p>
-<ul>
 <li><p><a href="https://www.tandfonline.com/doi/full/10.1080/14686996.2018.1439253#aHR0cHM6Ly93d3cudGFuZGZvbmxpbmUuY29tL2RvaS9wZGYvMTAuMTA4MC8xNDY4Njk5Ni4yMDE4LjE0MzkyNTM/bmVlZEFjY2Vzcz10cnVlQEBAMA==" target=&ldquo;blank&rdquo;><font color="blue">A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data</font></a> <br />
 Science and Technology of Advance Materials Journal (STAM), 2018. <br />
 Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yoshitaka Tateyama, Hisatsugu Yamazaki</p>
@@ -126,7 +126,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-10-11 14:52:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-10-26 08:13:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
